--- a/experience/index.html
+++ b/experience/index.html
@@ -5,17 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link id='favicon' rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-png">
 
-    <title>Experience | Portfolio Jigar Sable</title>
+    <title>Experience | Portfolio Muhamad Imam Fahurrozi</title>
 </head>
 <body oncontextmenu="return false">
 
-<!-- navbar starts -->
 <header>
-        <a href="/" class="logo"><i class="fab fa-node-js"></i> Jigar</a>
+        <a href="/" class="logo"><i class="fab fa-node-js"></i> Imam</a>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
@@ -30,9 +28,6 @@
             </ul>
         </nav>
 </header>
-<!-- navbar ends -->
-
-<!-- experience section starts -->
 <section class="experience" id="experience">
 
   <h2 class="heading"><i class="fas fa-briefcase"></i> Experience</h2>
@@ -45,11 +40,15 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Self Employed</h2>
+          <h2>Agroindustrial Technology Student Association HIMATITAN FTP UB</h2>
         </div>
         <div class="desc">
-            <h3>Full Stack Developer</h3>
-            <p>Oct 2021 - present</p>
+            <h3>Head of Community Service and Relations Division</h3>
+            <p>January 2024 – December 2024</p>
+            <ul>
+                <li>Coordinating and establishing cooperation with external parties related to community service and relations programs</li>
+                <li>Achieving the best Student Association 1 in the Collaborative category at Brawijaya University, and top 3 in the Productive category</li>
+            </ul>
         </div>
       </div>
     </div>
@@ -57,23 +56,31 @@
     <div class="container right">
         <div class="content">
           <div class="tag">
-            <h2>DevIncept (Top Contributor)</h2>
+            <h2>Student Executive BEM FTP UB</h2>
           </div>
           <div class="desc">
-              <h3>DCP 2021 Contributor | Open Source Program</h3>
-              <p>July 2021 - October 2021</p>
+              <h3>Expert Staff of the Ministry of Social Affairs and Community</h3>
+              <p>March 2023 – December 2023</p>
+              <ul>
+                  <li>Developing and implementing community service and teaching activities in Taji Village, Jabung District, Malang Regency</li>
+                  <li>Collaborating with 3 main partners in the FTP Edu Action work program</li>
+              </ul>
           </div>
         </div>
-      </div>
+    </div>
 
       <div class="container left">
         <div class="content">
           <div class="tag">
-            <h2>LetsGrowMore Summer of Code</h2>
+            <h2>PPK Ormawa Team of HIMATITAN X HIMABIO UB</h2>
           </div>
           <div class="desc">
-              <h3>LGM-SOC'21 Participant | Open Source Program</h3>
-              <p>June 2021 - August 2021</p>
+              <h3>Chairman</h3>
+              <p>February 2024 – April 2024</p>
+              <ul>
+                  <li>Leading the team in preparing proposals with the results of the Top 3 Proposals for PPK Ormawa Universitas Brawijaya 2024</li>
+                  <li>Representing the team in external communications and organizing evaluations and reports on program developments</li>
+              </ul>
           </div>
         </div>
       </div>
@@ -81,11 +88,15 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>Mapstreak Flyseas</h2>
+          <h2>FTP Edu Action</h2>
         </div>
         <div class="desc">
-            <h3>Web Developer | Internship</h3>
-            <p>June 2021 - Dec 2021</p>
+            <h3>Chairman</h3>
+            <p>June 2023 – November 2023</p>
+            <ul>
+                <li>Coordinating all divisions including Secretary, Treasurer, Public Relations Events, Transumsi, and DDM</li>
+                <li>Coordinating with 3 main partners to collaborate in teaching and student appreciation and motivation week</li>
+            </ul>
         </div>
       </div>
     </div>
@@ -93,11 +104,15 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>The Spark Foundation</h2>
+          <h2>HIMATITAN Social Project</h2>
         </div>
         <div class="desc">
-            <h3>Website Developer | Internship</h3>
-            <p>May 2021 - June 2021</p>
+            <h3>Chairman</h3>
+            <p>July 2022 – August 2022</p>
+            <ul>
+                <li>Coordinating with the Daily Management, Steering Committee, Organizing Committee, and external parties with 100% success indicator</li>
+                <li>Creating 6/6 detailed concepts and division of tasks by providing direction and supervision of activities</li>
+            </ul>
         </div>
       </div>
     </div>
@@ -105,11 +120,16 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>The Spark Foundation</h2>
+          <h2>PT. Indesso Aroma</h2>
         </div>
         <div class="desc">
-            <h3>Mobile Application Developer | Internship</h3>
-            <p>April 2021 - May 2021</p>
+            <h3>Internship Student of Maintenance Department</h3>
+            <p>January 2024 – February 2024</p>
+            <ul>
+                <li>Analysis of wastewater and activated sludge processing systems that will be processed into solid organic fertilizer and analysis of inlet and outlet samples of liquid waste produced (COD, TSS, DO, pH & SV30)</li>
+                <li>Following mandatory training Code of Conduct, Pre Requisite Program, HSE, FSSC 22000, and SJH</li>
+                <li>Creating flow diagrams and layouts for liquid waste processing and solving production equipment problems</li>
+            </ul>
         </div>
       </div>
     </div>
@@ -117,11 +137,15 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Frshr Technologies</h2>
+          <h2>Waste Technology Practicum</h2>
         </div>
         <div class="desc">
-            <h3>Wordpress Developer | Internship</h3>
-            <p>April 2021 - April 2021</p>
+            <h3>Assistant</h3>
+            <p>August 2024 – December 2024</p>
+            <ul>
+                <li>Creating a Waste Technology practicum module with the topic of Anaerobic Digestion covering theory, procedures, and implementation guidelines</li>
+                <li>Guide 40+ students during practicum, evaluating practicum report results, and providing feedback to improve understanding of waste processing concepts</li>
+            </ul>
         </div>
       </div>
     </div>
@@ -129,26 +153,18 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>WonderingBlog</h2>
+          <h2>Industrial Microbiology Practicum</h2>
         </div>
         <div class="desc">
-            <h3>Web Development & SEO | Internship</h3>
-            <p>March 2021 - April 2021</p>
+            <h3>Assistant</h3>
+            <p>February 2024 – July 2024</p>
+            <ul>
+                <li>Compiling materials and guiding Industrial Microbiology practices, including solid and liquid substrate fermentation and product manufacturing (tempeh, kimchi, yogurt)</li>
+                <li>Evaluate 40+ student practicum reports and providing assistance during laboratory sessions to ensure understanding and work safety</li>
+            </ul>
         </div>
       </div>
     </div>
-
-    <div class="container left">
-        <div class="content">
-          <div class="tag">
-            <h2>Hacktoberfest 2020</h2>
-          </div>
-          <div class="desc">
-              <h3>Contributor | Open Source Program</h3>
-              <p>October 2020 - November 2020</p>
-          </div>
-        </div>
-      </div>
 
   </div>
 
@@ -156,21 +172,17 @@
     <a href="/#experience" class="btn">
         <i class="fas fa-arrow-left"></i>
         <span>Back to Home</span>
-  </a>
+    </a>
   </div>
 
-</div>
 </section>
-<!-- experience section ends -->
-
-<!-- footer section starts -->
 <section class="footer">
 
   <div class="box-container">
 
       <div class="box">
-          <h3>Jigar's Portfolio</h3>
-          <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
+          <h3>Imam's Portfolio</h3>
+          <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀.</p>
       </div>
 
       <div class="box">
@@ -185,38 +197,24 @@
 
       <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i>+91 704-302-4736</p>
-          <p> <i class="fas fa-envelope"></i>jigarsable21@gmail.com</p>
-          <p> <i class="fas fa-map-marked-alt"></i>Pune, India-412206</p>
+          <p> <i class="fas fa-phone"></i>+6287737587548</p>
+          <p> <i class="fas fa-envelope"></i>imamfahurrozi@gmail.com</p>
+          <p> <i class="fas fa-map-marked-alt"></i>Grobogan, Indonesia</p>
           <div class="share">
-
-            <a href="https://www.linkedin.com/in/jigar-sable" class="fab fa-linkedin" target="_blank"></a>
-            <a href="https://github.com/jigar-sable" class="fab fa-github" target="_blank"></a>
-            <a href="mailto:jigarsable21@gmail.com" class="fas fa-envelope" target="_blank"></a>
-            <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" target="_blank"></a>
-            <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" target="_blank"></a>
+            <a href="https://www.linkedin.com/in/muhamad-imam-fahurrozi-424789255" class="fab fa-linkedin" target="_blank"></a>
+            <a href="https://www.instagram.com/muhamadimamfa" class="fab fa-instagram" target="_blank"></a>
+            <a href="mailto:imamfahurrozi@gmail.com" class="fas fa-envelope" target="_blank"></a>
           </div>
       </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable"> jigar sable</a></h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable"> Jigar Sable</a> (adapted for Imam's CV)</h1>
 
 </section>
-<!-- footer section ends -->
-
-<!-- scroll top btn -->
 <a href="#experience" class="fas fa-angle-up" id="scroll-top"></a>
-<!-- scroll back to top -->
-
-
-<!-- ==== ALL MAJOR JAVASCRIPT CDNS STARTS ==== -->
-<!-- jquery cdn -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-<!-- scroll reveal anim -->
 <script src="https://unpkg.com/scrollreveal"></script>
-<!-- ==== ALL MAJOR JAVASCRIPT CDNS ENDS ==== -->
-
 <script src="./script.js"></script>
 
 </body>
