--- a/index.html
+++ b/index.html
@@ -245,12 +245,97 @@
 </section>
 <section class="work" id="work">
 
-  <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
+  <h2 class="heading"><i class="fas fa-laptop-code"></i> Organizational <span>And Project Experiences</span></h2>
 
   <div class="box-container">
 
     </div>
+<div class="box-container">
 
+    <div class="box tilt packaging">
+      <img src="/assets/images/projects/project-gula-aren.png" alt="Smart and Intelligent Packaging for Palm Sugar" />
+      <div class="content">
+        <div class="tag">
+          <h3>Smart Packaging for Palm Sugar</h3>
+        </div>
+        <div class="desc">
+          <p>Developed packaging for palm sugar with a smart and intelligent packaging concept.</p>
+          <div class="btns">
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="box tilt health">
+      <img src="/assets/images/projects/project-sappancare.png" alt="SappanCare Health Supplement" />
+      <div class="content">
+        <div class="tag">
+          <h3>SappanCare (Cholesterol Health Supplement)</h3>
+        </div>
+        <div class="desc">
+          <p>Developed a health supplement to combat cholesterol from Sappan wood extract (Caesalpinia sappan L.).</p>
+          <div class="btns">
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="box tilt marketing">
+      <img src="/assets/images/projects/project-umkm.png" alt="Marketing Module and Design for UMKM Tunjungrejo" />
+      <div class="content">
+        <div class="tag">
+          <h3>Marketing Strategy for SMEs Tunjungrejo</h3>
+        </div>
+        <div class="desc">
+          <p>Developed marketing modules and design for chip products at UMKM Tunjungrejo, as part of MMD Universitas Brawijaya program.</p>
+          <div class="btns">
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="box tilt iot">
+      <img src="/assets/images/projects/project-iot-wastewater.png" alt="IoT Wastewater Monitoring System" />
+      <div class="content">
+        <div class="tag">
+          <h3>IoT Wastewater Monitoring System Prototype</h3>
+        </div>
+        <div class="desc">
+          <p>Designed and built a prototype for an Internet of Things (IoT) based wastewater temperature and turbidity monitoring system.</p>
+          <div class="btns">
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="#" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="backbtn">
+    <a href="/#work" class="btn">
+        <i class="fas fa-arrow-left"></i>
+        <span>Back to Home</span>
+    </a>
+  </div>
+
+</section>
+<a href="#work" class="fas fa-angle-up" id="scroll-top"></a>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js" integrity="sha512-SttpKhJqONuBVxbRcuH0wezjuX+BoFoli0yPsnrAADcHsQMW8rkR84ItFHGIkPvhnlRnE2FaifDOUw+EltbuHg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://unpkg.com/scrollreveal"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js" integrity="sha512-Zq2BOxyhvnRFXu0+WE6ojpZLOU2jdnqbrM1hmVdGzyeCa1DgM3X5Q4A/Is9xA1IkbUeDd7755dNNI/PzSf2Pew==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="./script.js"></script>
+
+</body>
+    
 <div class="viewall">
   <a href="/projects" class="btn"><span>View All</span>
     <i class="fas fa-arrow-right"></i>
@@ -499,6 +584,7 @@
 
 </body>
 </html>
+
 
 
 
